--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <a href="#">
                     <div class="whatsupp">
                         <i class="fa-brands fa-whatsapp"></i>
-                        <span>Whatsap</span>
+                        <span>WhatsApp</span>
                     </div>
                 </a>
                 <a href="#">
@@ -143,6 +143,9 @@
                     <input class="submit-button" type="submit">
                 </form>
 
+            </div>
+            <div class="copyright">
+                <p>Copyright 2023 by Sergey Shpak. All Rights Reserved.</p>
             </div>
         </footer>
 
